# notion-meeting-scraper

./: .gitignore  README.md  config.yaml  convert_meetings.js  pyproject.toml  requirements.txt  scrape_meetings.js
src/: __init__.py  cli.py  config.py  formatter.py  parser.py  scraper.py
